<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewTitle"
        style="@style/textShadow"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/label_demo_nfc"
        android:textAlignment="center" />
    <EditText
        android:id="@+id/textViewTagNFC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/message"
        android:inputType="textMultiLine">

        <requestFocus />
    </EditText>
    <Button
        android:id="@+id/buttonWrite"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTagNFC"
        android:layout_alignStart="@+id/textViewTagNFC"
        android:layout_marginTop="34dp"
        android:background="@drawable/mybutton"
        android:text= "@string/writencf"
        android:textAlignment="center"
        android:textColor="#ffffff" />

</RelativeLayout>

