<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/tracker">

    <TextView
        android:id="@+id/user_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:text="@string/user_txt" />

    <EditText
        android:id="@+id/user_box"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="text"
        android:background="#ffffff"/>

    <TextView
        android:id="@+id/pass_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:text="@string/pass_txt" />

    <EditText
        android:id="@+id/pass_box"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:background="#ffffff"/>

    <TextView
        android:id="@+id/position5_txt"
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <Button
        android:id="@+id/login"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/mybutton"
        android:text="@string/login"
        android:onClick="login"
        android:textAlignment="center"
        android:textColor="#ffffff" />

</LinearLayout>
